DoubleTapToJump: Depend on touch events instead of RuntimeEnabledFeature

This CL removes the DoubleTapToJump RuntimeEnabledFeature that was used
to determine whether to jump a video 10 seconds or go into fullscreen
on a double-tap. Instead, the video will jump 10 seconds if both taps
are from touch events.

Bug: 821834
Change-Id: Ie0fa6a56c3775a74b575ae2ac7343afcf47a8d47
Reviewed-on: https://chromium-review.googlesource.com/981417
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546831}
Former-commit-id: 46546d34e5c8ca162b7de0b37e42460b56ef8a7e