third_party/WebKit/Source/modules/media_controls/MediaControlsImpl.h
@@ -135,7 +135,7 @@ class MODULES_EXPORT MediaControlsImpl final : public HTMLDivElement,
   void ShowOverlayCastButtonIfNeeded();
 
   // Methods call by the scrubber.
-  void BeginScrubbing();
+  void BeginScrubbing(bool);
   void EndScrubbing();
   void UpdateCurrentTimeDisplay();
 
