third_party/WebKit/Source/platform/exported/WebRuntimeFeatures.cpp
@@ -491,10 +491,6 @@ void WebRuntimeFeatures::EnablePWAFullCodeCache(bool enable) {
   RuntimeEnabledFeatures::SetPWAFullCodeCacheEnabled(enable);
 }
 
-void WebRuntimeFeatures::EnableDoubleTapToJumpOnVideo(bool enable) {
-  RuntimeEnabledFeatures::SetDoubleTapToJumpOnVideoEnabled(enable);
-}
-
 void WebRuntimeFeatures::EnableCodeCacheAfterExecute(bool enable) {
   RuntimeEnabledFeatures::SetCodeCacheAfterExecuteEnabled(enable);
 }
