third_party/WebKit/LayoutTests/media/media-controls.js
@@ -371,8 +371,7 @@ function checkPictureInPictureInterstitialDoesNotExist(videoElement) {
 }
 
 function doubleTapAtCoordinates(x, y, timeout, callback) {
-  if (timeout == undefined)
-    timeout = 100;
+  timeout = timeout == undefined ? 100 : timeout;
 
   chrome.gpuBenchmarking.pointerActionSequence([
     {
@@ -417,15 +416,21 @@ function singleTouchAtCoordinates(xPos, yPos, callback) {
   ], callback);
 }
 
-function enableDoubleTapToJumpForTest(t) {
-  var doubleTapToJumpOnVideoEnabledValue =
-      internals.runtimeFlags.doubleTapToJumpOnVideoEnabled;
-  internals.runtimeFlags.doubleTapToJumpOnVideoEnabled = true;
+function doubleTouchAtCoordinates(x, y, timeout, callback) {
+  timeout = timeout == undefined ? 100 : timeout;
 
-  t.add_cleanup(() => {
-    internals.runtimeFlags.doubleTapToJumpOnVideoEnabled =
-        doubleTapToJumpOnVideoEnabledValue;
-  });
+  chrome.gpuBenchmarking.pointerActionSequence([
+    {
+      source: 'touch',
+      actions: [
+        { name: 'pointerDown', x: x, y: y },
+        { name: 'pointerUp' },
+        { name: 'pause', duration: timeout / 1000 },
+        { name: 'pointerDown', x: x, y: y },
+        { name: 'pointerUp' }
+      ]
+    }
+  ], callback);
 }
 
 function enablePictureInPictureForTest(t) {
